# ChickenTicket

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  concurrent_simulator.py  node.py  peerslist.txt  pyproject.toml  requirements.txt  setup.py  simulator.py  test.py
.github/workflows/: codecov.yml  codeql.yml
docs/: README.md  intro.rst
src/: address.py  block.py  blockchain.py  chain.py  commands.py  config.py  genesis.py  hardcoded.py  httpnode.py  keys.py  ledger.py  mempool.py  merkle.py  network.py  node.py  setup.py  simplegui.py  transaction.py  validator.py  wallet.py
src/allium/: allium.c
src/crypto/: __init__.py  chicken.py
src/ui/: main_window.ui
src/ui/simplegui/: main_window.py  new_wallet_window.py  password_window.py  receive_window.py  recovery_phrase_window.py  send_window.py  settings_window.py
src/utils/: concurrency.py  merkle.py  merkles.py  slog.py  time_tools.py
tests/: test_address.py  test_block.py  test_chain.py  test_chicken_hash.py  test_keys.py  test_time_tools.py  test_transaction.py
