[tool.black]
line-length = 90

[tool.poetry]
name = "chickenticket"
version = "0.1.0"
description = "Python-powered blockchain solution"
authors = ["Aareon Sullivan <askully13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycryptodomex = "^3.20.0"
ecdsa = "^0.18.0"
base58 = "^2.1.1"
loguru = "^0.7.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
